fixes autocomplte overflow on small devices

--- a/goobi-viewer-core/WebContent/resources/css/dev/viewer.css
+++ b/goobi-viewer-core/WebContent/resources/css/dev/viewer.css
@@ -4492,6 +4492,7 @@ div[id*="-Modal"] .email-form .form-group {
 }
 /* AUTOCOMPLETE PANEL */
 .ui-autocomplete-panel {
+  max-width: 100%;
   font-size: 12px;
   border: 1px solid #eee;
   border-radius: 0;
